--- a/FormSample/app/src/main/res/values/strings.xml
+++ b/FormSample/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">GMDAppTemplate</string>
     <string name="seleccionar">Seleccionar</string>
     <string name="sign_up">Sign Up</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
